# SynRaptor

./: .gitignore  README.md  setup.cfg  setup.py
SynRaptor/: __init__.py  calcutale_significances.py  combination.py  data_set.py  drug.py  drug_comb_dict.py  figures.py  figures_script.py  plotting.py  surface_plot.py  synthetic_data_test.py  test_volume_sig.py
examples/: introduction_example.ipynb
src/: Combination.py  Drug.py  Plotting.py  __init__.py
synraptor/: __init__.py
synraptor/CombinationModels/: BlissCombinationModel.py  CombinationModelBase.py  HSACombinationModel.py  __init__.py
synraptor/DoseResponseModels/: DoseResponseModelBase.py  HillCurveModel.py  __init__.py
synraptor/Visualization/: CombinationPlots.py  DoseResponsePlots.py  __init__.py
test/: test_combinations.py  test_drugs.py  tests_drug.py
