##########################
# Setup.py Configuration #
##########################

[metadata]
name = synraptor
version = attr: synraptor.version.__version__
description = A package for the statistical analysis of high throughput synergy screening data.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs
url = https://github.com/jvanhoefer/SynRaptor

# Author information
author = Jakob Vanhoefer
author_email = jakob.vanhoefer@uni-bonn.de

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords = Drug Synergy, Uncertainty Quantification, Statistical Analysis

[options]
install_requires =
    numpy >= 1.15
    scipy >= 1.3
    pypesto>=0.2.6
    matplotlib >= 3
    seaborn >= 0.10.0

zip_safe = False
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:

[bdist_wheel]
# Requires python 3
universal = False
